--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,60 +3,25 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main  # Trigger CI/CD on push to the main branch
+      - main
 
 jobs:
-  build-test:
+  build:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:14
-        env:
-          POSTGRES_USER: django_user
-          POSTGRES_PASSWORD: django_pass
-          POSTGRES_DB: django_db
-        ports:
-          - 5432:5432
-
     steps:
+      # Step 1: Checkout Code
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Step 2: Set Up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
+      # Step 3: Install Dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run tests
-        env:
-          DATABASE_URL: postgres://django_user:django_pass@localhost:5432/django_db
-        run: |
-          python manage.py test
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-test
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and Push Docker Image
-        run: |
-          docker build -t your-dockerhub-username/lms-app:latest .
-          docker push your-dockerhub-username/lms-app:latest
