--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,6 +9,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:14
+        env:
+          POSTGRES_USER: django_user
+          POSTGRES_PASSWORD: django_pass
+          POSTGRES_DB: django_db
+        ports:
+          - 5432:5432
+
     steps:
       # Step 1: Checkout Code
       - name: Checkout code
@@ -25,3 +35,48 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      # Step 4: Run Migrations and Tests
+      - name: Run migrations and tests
+        env:
+          DATABASE_URL: postgres://django_user:django_pass@localhost:5432/django_db
+        run: |
+          python manage.py migrate
+          python manage.py test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      # Step 1: Checkout Code
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Step 2: Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Step 3: Build and Push Docker Image
+      - name: Build and push Docker image
+        run: |
+          docker build -t your-dockerhub-username/lms-app:latest .
+          docker push your-dockerhub-username/lms-app:latest
+
+      # Step 4: Deploy to Remote Server
+      - name: Deploy to server
+        env:
+          SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
+          SERVER_IP: ${{ secrets.SERVER_IP }}
+          SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+        run: |
+          sudo apt-get install -y sshpass
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
+          docker pull your-dockerhub-username/lms-app:latest
+          docker stop lms-container || true
+          docker rm lms-container || true
+          docker run -d --name lms-container -p 8000:8000 your-dockerhub-username/lms-app:latest
+          EOF
