--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,48 +36,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r feedback_system/requirements.txt
 
-
       # Step 4: Run Migrations and Tests
       - name: Run migrations and tests
+        working-directory: feedback_system  # Set working directory to the folder with manage.py
         env:
           DATABASE_URL: postgres://django_user:django_pass@localhost:5432/django_db
         run: |
           python manage.py migrate
           python manage.py test
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      # Step 1: Checkout Code
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Step 2: Log in to Docker Hub
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      # Step 3: Build and Push Docker Image
-      - name: Build and push Docker image
-        run: |
-          docker build -t your-dockerhub-username/lms-app:latest .
-          docker push your-dockerhub-username/lms-app:latest
-
-      # Step 4: Deploy to Remote Server
-      - name: Deploy to server
-        env:
-          SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
-          SERVER_IP: ${{ secrets.SERVER_IP }}
-          SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
-        run: |
-          sudo apt-get install -y sshpass
-          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
-          docker pull your-dockerhub-username/lms-app:latest
-          docker stop lms-container || true
-          docker rm lms-container || true
-          docker run -d --name lms-container -p 8000:8000 your-dockerhub-username/lms-app:latest
-          EOF
