--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline for Django LMS App
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     services:
@@ -21,10 +21,10 @@ jobs:
 
     steps:
       # Step 1: Checkout Code
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Set Up Python
+      # Step 2: Set Up Python Environment
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -38,10 +38,47 @@ jobs:
 
       # Step 4: Run Migrations and Tests
       - name: Run migrations and tests
-        working-directory: feedback_system  # Move into feedback_system directory
+        working-directory: feedback_system
         env:
-          DJANGO_SETTINGS_MODULE: feedback_system.settings  # Explicitly set the settings module
+          DJANGO_SETTINGS_MODULE: feedback_system.settings
           DATABASE_URL: postgres://django_user:django_pass@localhost:5432/django_db
         run: |
           python manage.py migrate
           python manage.py test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+
+    steps:
+      # Step 1: Checkout Code
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Step 2: Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Step 3: Build and Push Docker Image
+      - name: Build and push Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/project2-lms:latest -f feedback_system/Dockerfile .
+          docker push ${{ secrets.DOCKER_USERNAME }}/project2-lms:latest
+
+      # Step 4: Deploy to Remote Server
+      - name: Deploy to server
+        env:
+          SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
+          SERVER_IP: ${{ secrets.SERVER_IP }}
+          SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+        run: |
+          sudo apt-get install -y sshpass
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
+          docker pull ${{ secrets.DOCKER_USERNAME }}/project2-lms:latest
+          docker stop project2-lms-container || true
+          docker rm project2-lms-container || true
+          docker run -d --name project2-lms-container -p 8000:8000 ${{ secrets.DOCKER_USERNAME }}/project2-lms:latest
+          EOF
