--- a/feedback_system/Dockerfile
+++ b/feedback_system/Dockerfile
@@ -1,22 +1,21 @@
-# Use Python 3.10 slim image
+# Base image
 FROM python:3.10-slim
 
-# Install necessary packages
-RUN apt-get update && apt-get install -y netcat-openbsd && apt-get clean
-
-# Set the working directory
+# Set working directory
 WORKDIR /app
 
-# Copy requirements and install them
+# Copy requirements and install dependencies
 COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application code
+# Copy project files
 COPY . /app
 
-# Ensure wait-for-it.sh is executable
-COPY wait-for-it.sh /app/wait-for-it.sh
-RUN chmod +x /app/wait-for-it.sh
+# Set environment variables
+ENV PYTHONUNBUFFERED=1
 
-# Default command to start the app
-CMD ["./wait-for-it.sh", "db:5432", "--", "python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Expose port
+EXPOSE 8000
+
+# Run the app
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
