--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,8 +40,45 @@ jobs:
       - name: Run migrations and tests
         working-directory: feedback_system
         env:
-          DJANGO_SETTINGS_MODULE: feedback_system.feedback_system.settings
+          DJANGO_SETTINGS_MODULE: feedback_system.settings
           DATABASE_URL: postgres://django_user:django_pass@localhost:5432/django_db
         run: |
           python manage.py migrate
           python manage.py test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+
+    steps:
+      # Step 1: Checkout Code
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Step 2: Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Step 3: Build and Push Docker Image
+      - name: Build and push Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/project2-lms:latest -f feedback_system/Dockerfile .
+          docker push ${{ secrets.DOCKER_USERNAME }}/project2-lms:latest
+
+      # Step 4: Deploy to Remote Server
+      - name: Deploy to server
+        env:
+          SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
+          SERVER_IP: ${{ secrets.SERVER_IP }}
+          SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+        run: |
+          sudo apt-get install -y sshpass
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
+          docker pull ${{ secrets.DOCKER_USERNAME }}/project2-lms:latest
+          docker stop project2-lms-container || true
+          docker rm project2-lms-container || true
+          docker run -d --name project2-lms-container -p 8000:8000 ${{ secrets.DOCKER_USERNAME }}/project2-lms:latest
+          EOF
