--- a/feedback_system/Dockerfile
+++ b/feedback_system/Dockerfile
@@ -1,21 +1,12 @@
-# Base image
 FROM python:3.10-slim
 
-# Set working directory
 WORKDIR /app
 
-# Copy requirements and install dependencies
-COPY requirements.txt /app/requirements.txt
+COPY feedback_system/requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy project files
-COPY . /app
-
-# Set environment variables
+COPY feedback_system /app
 ENV PYTHONUNBUFFERED=1
 
-# Expose port
-EXPOSE 8000
-
-# Run the app
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+EXPOSE 8000
