--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline for Django LMS App
+name: CI/CD Pipeline for Local Deployment
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted  # Use your local machine
 
     services:
       postgres:
@@ -37,41 +37,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step 4: Run Migrations and Tests
-      - name: Run migrations and tests
+      # Step 4: Run Migrations and Start Server Locally
+      - name: Run migrations and start Django server
         working-directory: feedback_system
         env:
           DJANGO_SETTINGS_MODULE: feedback_system.settings
           DATABASE_URL: postgres://django_user:django_pass@localhost:5432/django_db
         run: |
           python manage.py migrate
-          python manage.py test
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-
-    steps:
-      # Step 1: Checkout Code
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # Step 2: Setup SSH for Deployment
-      - name: Setup SSH Key
-        uses: webfactory/ssh-agent@v0.7.0
-        with:
-          ssh-private-key: |
-            ${{ secrets.SSH_PRIVATE_KEY }}
-
-      # Step 3: Deploy to Remote Server
-      - name: Deploy to server
-        env:
-          SERVER_IP: ${{ secrets.SERVER_IP }}
-          SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
-        run: |
-          ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
-          docker pull your-dockerhub-username/project2-lms:latest
-          docker stop project2-lms-container || true
-          docker rm project2-lms-container || true
-          docker run -d --name project2-lms-container -p 8000:8000 your-dockerhub-username/project2-lms:latest
-          EOF
+          python manage.py runserver 0.0.0.0:8000
