--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline for Local Deployment
+name: CI/CD Pipeline for Docker Deployment
 
 on:
   push:
@@ -6,18 +6,8 @@ on:
       - main
 
 jobs:
-  build-and-run:
-    runs-on: self-hosted  # Run on your local self-hosted runner
-
-    services:
-      postgres:
-        image: postgres:14
-        env:
-          POSTGRES_USER: django_user
-          POSTGRES_PASSWORD: django_pass
-          POSTGRES_DB: django_db
-        ports:
-          - 5432:5432
+  build-and-deploy:
+    runs-on: self-hosted  # Use your local machine runner
 
     steps:
       # Step 1: Checkout Code
@@ -26,27 +16,27 @@ jobs:
 
       # Step 2: Set Up Docker
       - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
+
+      # Step 3: Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Step 4: Build and Run Docker Compose
+      - name: Build and run Docker Compose
         run: |
-          docker --version
+          docker-compose -f docker-compose.yml up --build -d
 
-      # Step 3: Build and Run Docker Container
-      - name: Build and run Django app in Docker
-        working-directory: feedback_system
-        env:
-          DATABASE_URL: postgres://django_user:django_pass@localhost:5432/django_db
-        run: |
-          # Stop and remove existing container if running
-          docker stop django-container-local || true
-          docker rm django-container-local || true
-          
-          # Build the Docker image
-          docker build -t django-app-local .
-
-          # Run the container
-          docker run -d -p 8000:8000 --name django-container-local \
-          -e DATABASE_URL=$DATABASE_URL \
-          django-app-local
-
-      # Step 4: Verify Application is Running
-      - name: Check running containers
+      # Step 5: Check Running Containers
+      - name: List running containers
         run: docker ps
+
+      # Step 6: Wait for Server Health Check
+      - name: Wait for server to be ready
+        run: |
+          echo "Waiting for server to be ready..."
+          sleep 10
+          curl --retry 10 --retry-delay 5 --retry-connrefused http://localhost:8000
