--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline for Docker Deployment
+name: CI/CD Pipeline for Local Deployment
 
 on:
   push:
@@ -7,36 +7,26 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: self-hosted  # Use your local machine runner
+    runs-on: self-hosted  # Use your local machine as a runner
 
     steps:
       # Step 1: Checkout Code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Set Up Docker
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
-
-      # Step 3: Log in to Docker Hub
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      # Step 4: Build and Run Docker Compose
-      - name: Build and run Docker Compose
+      # Step 2: Set up Docker
+      - name: Set up Docker Compose
         run: |
-          docker-compose -f docker-compose.yml up --build -d
+          docker-compose --version
 
-      # Step 5: Check Running Containers
-      - name: List running containers
-        run: docker ps
-
-      # Step 6: Wait for Server Health Check
-      - name: Wait for server to be ready
+      # Step 3: Pull and Build Containers
+      - name: Build and Run Containers
         run: |
-          echo "Waiting for server to be ready..."
-          sleep 10
-          curl --retry 10 --retry-delay 5 --retry-connrefused http://localhost:8000
+          docker-compose down
+          docker-compose up --build -d
+
+      # Step 4: Verify Application
+      - name: Verify Application
+        run: |
+          docker ps
+          curl --retry 10 --retry-delay 5 http://localhost:8000
